--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -124,7 +124,7 @@ jobs:
       - name: Create tarball
         run: |
           cd release-package
-          tar -czvf ../x-ui-linux-${{ matrix.arch }}-${{ steps.version.outputs.VERSION }}.tar.gz *
+          tar -czvf ../x-ui-linux-${{ matrix.arch }}.tar.gz *
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -193,3 +193,4 @@ jobs:
           echo "```bash"
           echo "bash <(curl -Ls https://raw.githubusercontent.com/${{ github.repository }}/main/install_custom.sh) ${{ steps.version.outputs.VERSION }}"
           echo "```"
+
