Add ARM64 cross-compiler support

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,8 +72,18 @@ jobs:
           fi
           echo "xray binary verified: $(ls -lh bin/xray-linux-${{ matrix.arch }})"
 
+      - name: Install ARM64 cross-compiler
+        if: matrix.arch == 'arm64'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
+          echo "ARM64 cross-compiler installed"
+
       - name: Build for ${{ matrix.arch }}
         run: |
+          if [ "${{ matrix.arch }}" = "arm64" ]; then
+            export CC=aarch64-linux-gnu-gcc
+          fi
           CGO_ENABLED=1 GOOS=linux GOARCH=${{ matrix.arch }} go build -o x-ui-${{ matrix.arch }} main.go
 
       - name: Prepare release files
@@ -195,4 +205,4 @@ jobs:
 
 
 
-
+
