--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,13 +74,21 @@ jobs:
 
       - name: Build for ${{ matrix.arch }}
         run: |
-          # 使用 Alpine 的 musl 进行静态编译，兼容低版本 glibc
-          # 先清理之前可能存在的 CGO 设置
-          unset CC
+          # 为不同架构选择正确的编译器
+          if [ "${{ matrix.arch }}" = "arm64" ]; then
+            # ARM64: 使用交叉编译器 + 静态链接
+            sudo apt-get install -y gcc-aarch64-linux-gnu musl-tools
+            export CC=aarch64-linux-gnu-gcc
+            export CGO_LDFLAGS="-static"
+          else
+            # amd64: 使用 musl-gcc 进行静态编译
+            sudo apt-get install -y musl-tools
+            export CC=musl-gcc
+            export CGO_LDFLAGS="-static"
+          fi
           
-          # 使用纯静态编译选项
+          # 静态编译
           CGO_ENABLED=1 GOOS=linux GOARCH=${{ matrix.arch }} \
-          CGO_LDFLAGS="-static" \
           go build -ldflags="-linkmode=external -extldflags=-static -s -w" \
           -o x-ui-${{ matrix.arch }} main.go
 
@@ -199,6 +207,7 @@ jobs:
           echo "```bash"
           echo "bash <(curl -Ls https://raw.githubusercontent.com/${{ github.repository }}/main/install_custom.sh) ${{ steps.version.outputs.VERSION }}"
           echo "```"
+
 
 
 
