--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,45 +69,34 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
+      
+      - name: Register QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: all
+      
       - name: Build binary using Docker
         run: |
-          docker run --rm \
-            --privileged \
-            multiarch/qemu-user-static --reset -p yes \
-            -v ${{ github.workspace }}:/workspace \
-            ubuntu:18.04 /bin/bash -c "
-              set -e
-              
-              # 安装编译工具链
-              apt-get update
-              apt-get install -y wget git gcc g++ make
-
-              # 安装 Go 1.21（兼容 Ubuntu 18.04）
-              wget -q https://go.dev/dl/go1.21.5.linux-amd64.tar.gz
-              rm -rf /usr/local/go
-              tar -C /usr/local -xzf go1.21.5.linux-amd64.tar.gz
-              rm go1.21.5.linux-amd64.tar.gz
-
-              # 设置 Go 环境
-              export PATH=/usr/local/go/bin:$PATH
-              export GOPATH=/tmp/gopath
-              export GO111MODULE=on
-
-              # 进入工作目录
-              cd /workspace
-
-              # 创建 Go 模块缓存
-              mkdir -p /tmp/gopath
-              export GOCACHE=/tmp/gocache
-
-              # 编译
-              CGO_ENABLED=1 GOOS=linux GOARCH=${{ matrix.arch }} \
-                go build -ldflags='-linkmode=external -s -w' \
-                -o x-ui-${{ matrix.arch }} main.go
-
-              echo 'Build completed'
-            "
+          docker run --rm -v ${{ github.workspace }}:/workspace ubuntu:18.04 /bin/bash -lc "
+            set -e
+            apt-get update
+            apt-get install -y wget git gcc g++ make gcc-aarch64-linux-gnu
+            wget -q https://go.dev/dl/go1.21.5.linux-amd64.tar.gz
+            rm -rf /usr/local/go
+            tar -C /usr/local -xzf go1.21.5.linux-amd64.tar.gz
+            rm go1.21.5.linux-amd64.tar.gz
+            export PATH=/usr/local/go/bin:\$PATH
+            export GOPATH=/tmp/gopath
+            export GO111MODULE=on
+            cd /workspace
+            mkdir -p /tmp/gopath
+            export GOCACHE=/tmp/gocache
+            if [ \"${{ matrix.arch }}\" = \"arm64\" ]; then export CC=aarch64-linux-gnu-gcc; else export CC=gcc; fi
+            CGO_ENABLED=1 GOOS=linux GOARCH=${{ matrix.arch }} \
+              go build -ldflags='-linkmode=external -s -w' \
+              -o x-ui-${{ matrix.arch }} main.go
+            echo 'Build completed'
+          "
 
       - name: Verify binary
         run: |
